2005-01-27  Leif Hedstrom  <leif@ogre.com>

	* typemap: Kludgy fix for "void *", used for the prldap options.

	* API.xs: Made it work properly, the arguments were totally wrong.

	* Conn.pm (new): Added support for the timeout (for NSPR enabled
	connections only!).
	(init): Honor this timeout option.
	(setNSPRTimeout): Fix for sending down the timeout options.
	(installNSPR): The "shared" argument wasn't properly passed down to the
	API when used on an established connection.

2005-01-05  Leif Hedstrom  <leif@ogre.com>

	* Conn.pm (init): Bad "my" declaration.

2005-01-04  Leif Hedstrom  <leif@ogre.com>

	* LDIF.pm: Changed all calls to new to use the class method directly.

	* Utils.pm: Changed all calls to new to use the class method directly.

	* Entry.pm: Changed all calls to new to use the class method directly.

	* Conn.pm: Changed all calls to new to use the class method directly.

	* Makefile.PL: Fixes for missing NSPR libraries, even though the prldap
	libraries are available...

2004-12-28  Leif Hedstrom  <leif@ogre.com>

	* Conn.pm (new): Added the entryclass argument.
	(newEntry): Honor the new entryclass setting.
	(nextEntry): Ditto.
	(delete): Changed to check if the provided entry is proper
	Mozilla::LDAP::Entry (or subclass) type.
	(add): Ditto.

2004-11-02  Leif Hedstrom  <leif@ogre.com>

	* API.xs (internal_sortcmp_proc): Added support for Perl sort functions.
	(ldap_multi_sort_entries): Ditto.
	(ldap_sort_entries): Ditto.

	* Conn.pm: Cleaned up NSPR code, fixed some bugs.
	(search): Added support for sortattrs, using multisort.
	(search): Fixed parsing of the attrs.
	(setOption): Set an "arbitrary" option.
	(getOption): Getter.
	(setSizelimit): Set the sizelimit.
	(getSizelimit): Getter.
	(init): Added the callback, this has at least the potential of making
	it possible to parse some server controls as returned by the
	asyncronous bind.
	(setOption): Added support for hash style arguments.

2004-10-28  Leif Hedstrom  <leif@ogre.com>
